2008-10-20  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac: Use gmodule-no-export-2.0, not gmodule-2.0,
	to avoid breaking the symbol hiding. (thanks to Ross Burton
	and Laurent Bigonville)

2008-10-20  Neil Roberts  <neil@linux.intel.com>

	Bug 1043 - COGL calls glTexSubImage2D() with out-of-bounds
	values (SIGSEGV)

	* clutter/cogl/gl/cogl-texture.c
	(_cogl_texture_upload_subregion_to_gl): When iterating over the
	slices, discard ones that don't intersect immediatly otherwise it
	will call glTexSubImage2D with a negative width/height and then
	move the source position incorrectly. Thanks to Gwenole
	Beauchesne.

2008-10-20  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-color.h: Declare clutter_color_new() in the
	installed header.

2008-10-20  Neil Roberts  <neil@linux.intel.com>

	Bug 1195 - ClutterBehaviourBspline only works for very short paths

	* clutter/clutter-behaviour-bspline.c: Changed the CBZ_T_POW3 and
	CBZ_T_MUL functions so that they preserve more of the least
	significant bits. This fixes some of the jaggy behaviour with
	longer paths.

2008-10-17  Thomas Wood  <thomas@linux.intel.com>

	reviewed by: Emmanuele Bassi <ebassi@linux.intel.com>

	* clutter/clutter-color.[ch]: Add GParamSpec and GValue integration
	for ClutterColor. With ClutterParamSpecColor it is possible to define
	color properties; with the GValue integration it's possible to
	automatically transform strings into colors and vice versa.

	(clutter_color_free): Allow NULL parameter to match other boxed
	types destructors.

	(clutter_color_new): Add a constructor for the ClutterColor boxed
	type, mostly for bindings.

2008-10-17  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-color.c (clutter_color_parse): Add checks
	for the arguments, to avoid trying to parse NULL strings.

2008-10-16  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-container.[ch]: Add checks to the Container