@@ -1371,9 +1371,9 @@ clutter_get_option_group_without_init (void)
 ClutterInitError
 clutter_init_with_args (int            *argc,
                         char         ***argv,
-                        char           *parameter_string,
+                        const char     *parameter_string,
                         GOptionEntry   *entries,
-                        char           *translation_domain,
+                        const char     *translation_domain,
                         GError        **error)
 {
   GOptionContext *context;
