@@ -1,3 +1,10 @@
+2008-10-21  Emmanuele Bassi  <ebassi@linux.intel.com>
+
+	Bug 1197 - Missing const for clutter_init_with_args *
+
+	* clutter/clutter-main.[ch] (clutter_init_with_args): Constify
+	the string parameters. (Owen Taylor)
+
 2008-10-20  Emmanuele Bassi  <ebassi@linux.intel.com>
 
 	* configure.ac: Use gmodule-no-export-2.0, not gmodule-2.0,
